<resources>
    <string name="app_name">Quick SMS</string>
    <string name="action_settings">Settings</string>
    <string name="rate_text">Rate this application?</string>
    <string name="button_never">Never</string>
    <string name="button_later">Later</string>
    <string name="button_rate">Rate</string>
    <string name="atring_rate">Rate application</string>
    <string name="string_exit">Exit</string>
    <string name="string_more_applications">More applications</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="string_message">Message</string>
    <string name="string_version">Version</string>
    <string name="string_retry">Retry</string>
    <string name="string_saved">Saved</string>
    <string name="string_add_template">Add template</string>
    <string name="string_edit_template">Edit template</string>
    <string name="string_deleted">Deleted</string>
    <string name="string_characters_left">Characters left</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_enable_quick_sms">Enable Quick SMS</string>
    <string name="string_send_feedback">Send feedback</string>
    <string name="string_user_interface">User Interface</string>
    <string name="string_other">Other</string>
    <string name="string_dark_theme">Dark theme</string>
    <string name="empty_list_message">For now You don\'t have any SMS templates for using in this application. Click plus button to add new one.</string>
    <string name="string_type_message">Type new message</string>
    <string name="string_template">Template</string>
    <string name="string_open_source">Open source software</string>
    <string name="empty_warming">Must be not empty!</string>
    <string name="empty_list_warming">You don\'t have templates, so type new message to send it</string>
    <string name="string_send">Send</string>
    <string name="delete">Delete</string>
</resources>
