<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_feedback" android:title="@string/string_send_feedback"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rate" android:title="@string/atring_rate"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_more" android:title="@string/string_more_applications"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/string_exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
